@@ -44,7 +44,25 @@
 	      <version>3.11.0</version>
 	      <configuration>
 	        <release>17</release>
+	        <fork>true</fork>
+	        <argLine>
+	            --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+	            --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+	        </argLine>
 	      </configuration>
+	    </plugin>
+	    <plugin>
+	        <groupId>org.apache.maven.plugins</groupId>
+	        <artifactId>maven-surefire-plugin</artifactId>
+	        <version>3.2.5</version>
 	    </plugin>
 	  </plugins>
 	</build>
@@ -151,7 +169,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<version>1.16.22</version>
+			<version>1.18.32</version> <!-- Updated Lombok version -->
 			<scope>provided</scope>
 		</dependency>
 
@@ -217,6 +235,12 @@
 			<version>1.38</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 </project>
